removeProductForm was not aligned with other submit buttons, is now fixed.

--- a/style/admin.css
+++ b/style/admin.css
@@ -893,7 +893,7 @@ body {
 
 #removeProductForm {
   display: grid;
-  grid-template-columns: 200px 20px 200px 20px 150px 85px 120px auto;
+  grid-template-columns: 160px 20px 160px 20px 160px auto 120px auto;
   grid-template-rows: auto;
 
   grid-column-start: 2;
